# machine_learning-

./: .gitlab-ci.yml  Dockerfile  README.md  backend.dockerfile  docker-compose.yml  mlflow.db  package-lock.json  pyproject.toml  text_processor.ipynb
.github/workflows/: ci.yml  python-app.yml
backend/: .gitignore  Dockerfile  backend.dockerfile  initial_data.py  pyproject.toml
backend/.github/workflows/: ci.yml  deploy.yml
backend/alembic/: env.py
backend/alembic/versions/: 0bb91a4d6ec5_chathistory.py  27c3463bb804_initial_migration.py  2f3b39ea89d5_change.py  3c87d2b1a428_create_user_table.py  3f9eda991a16_add_user_table.py  410e6e7b3d2f_initial.py  4373d42d0083_initial.py  5439773cff36_create_user_table.py  61bbe2918e04_initial.py  6a4869e40959_add_user_table.py  75640612468d_add_user_table.py  7b2b6e9b4a11_initial_migration.py  8604f38d27d8_add_user_table.py  919c98676330_create_tables.py  b3fcd4b9ff49_improve.py  b8ef20de3ff5_add_user_table.py  fd40ba373ac4_create_user_table.py
backend/app/: exceptions.py  main.py
backend/app/api/: deps.py
backend/app/app/: exceptions.py
backend/scripts/: test.sh
backend/test/: conftest.py
data/: DummyData.csv  SyntheticMedicalData.csv  policy_sequences_by_comb_enriched.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  Dashboard.js
k8s/: deployment.yaml  service.yaml
mlruns/0/: meta.yaml
models/app/: README.md
models/frontend/: package-lock.json
models/supervisor learning/: Decision_Tree_Classifier.ipynb  Logistic_Regression.ipynb  model.pkl
models/unsupervised learning/: EEG_model.ipynb  prediction_eeg.ipynb
notebook/: predict.ipynb
notebook/EEG/: GELU.ipynb  prediction_eeg.ipynb
notebook/supervisor learning/: Decision_Tree_Classifier.ipynb  Logistic_Regression.ipynb  policy.ipynb
notebook/test/: test.py  test_ml.ipynb
notebook/unsupervised learning/: prediction_eeg.ipynb
(+149 files in other folders)
