[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["alialibakhshi <alialibakhshi9898@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "2.1.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
category-encoders = "^2.8.1"
alembic = "^1.15.2"
fastapi = "^0.115.12"
pydantic-settings = "^2.8.1"
kagglehub = "^0.3.11"
graphviz = "^0.20.3"
persiantools = "^5.2.0"
tensorflow = "2.19.0"
pydot = "^3.0.4"
rocketry = "^2.5.1"
jdatetime = "^5.2.0"
torch = "^2.6.0"
jwt = "^1.3.1"
bcrypt = "^4.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
